Make Pipeline hash be the hashcode of the StepDefinition records list